# 20221Rasterizacion

./: .gitignore  CMakeLists.txt
E1-basico/: CMakeLists.txt  COpenGL.cpp  COpenGL.h  box.cpp  hello_triangle.cpp  hello_triangle_indexed.cpp  opengl01.cpp  primitiva.cpp  primitiva.h
LearnOpenGL/: 4.normal_mapping.fs  CMakeLists.txt  basic_lighting_diffuse.cpp  geometry_shader_houses.cpp  multiple_lights.cpp  normal_mapping.cpp  shadow_mapping_base.cpp  shadow_mapping_depth.cpp  textures.cpp
ModeloPLY/: CMakeLists.txt  basico1.fs  basico1.gs  basico1.vs  glad.c  main.cpp  main_freeglut.cpp
Piramide1/: CMakeLists.txt  fragmentShader.fs  main.cpp  main_vertices_indices.cpp  mat4.cpp  mat4.h  vertexShader.vs  vertexShader_modelo.vs
Piramide2/: CMakeLists.txt  basico0.fs  basico1.vs  basico2.vs  main.cpp
Proyecto2/: 2.2.basic_lighting.vs  BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Objeto.cpp  Objeto.h  main.cpp
